--- a/src/components/Form/components/Graphic/Graphic.module.css
+++ b/src/components/Form/components/Graphic/Graphic.module.css
@@ -1,6 +1,6 @@
 .graphicContainer {
     width: 90%;
-    height: 500px;
+    height: auto;
     background-color: #FFFFFF;
     border-radius: 5px;
     margin: 2rem auto;
