--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #F4F4F4;
+  background-color: #516d7d;
 }
 
