--- a/src/components/Form/components/Graphic/Graphic.module.css
+++ b/src/components/Form/components/Graphic/Graphic.module.css
@@ -6,4 +6,21 @@
     margin: 2rem auto;
     padding: 10px;
     box-shadow: -1px 1px 14px rgb(0 0 0 / 19%);
+    animation: fadeIn 1s;
 }
+
+.message {
+    color: #FFFFFF;
+    font-size: 30px;
+    margin: 32px 0;
+    text-align: center;
+}
+
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
